[package]
name = "docql-node"
version = "0.1.0"
authors = ["Bryan Burgers <bryan@burgers.io>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
async-trait = "0.1"
docql = { path = "..", default-features = false, features = [] }
js-sys = "0.3"
serde_json = "1"
wasm-bindgen = { version = "0.2", features = ["serde-serialize"] }
wasm-bindgen-futures = "0.4"
